internal/app/playbooks/role/catalogs/SampleCode/Java/files/demo-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-demo-api-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "demo-api.cnstudio.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: java-demo-api-svc
            port: 
              number: 8080
