internal/app/playbooks/role/catalogs/SampleCode/Java/files/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "keycloak.cnstudio.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: keycloak
            port: 
              number: 80
